# tradeship-backend

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  MIGRATION_GUIDE.md  README.md  TRADE_REQUEST_FLOW.md  docker-compose.yml  env.example  package.json  pnpm-lock.yaml  pyproject.toml
.ebextensions/: django.config
apps/auth/: admin.py  models.py  serializers.py  urls.py  views.py
apps/auth/migrations/: 0001_initial.py  0002_userprofile_interests.py
apps/notification/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/notification/migrations/: 0001_initial.py  0002_alter_notificationtype_name_chatparticipant_and_more.py
apps/payment/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/payment/migrations/: 0001_initial.py
apps/trade/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/: api_urls.py  config.py  settings.py  urls.py
core/utils/: api_conversion.py  case_conversion.py  exception_handlers.py
docs/: INSTRUCTIVO_SETUP.md
prisma/: schema.prisma  seed.ts
src/: app.controller.spec.ts  app.module.ts  app.service.ts  main.ts
src/auth/: auth.controller.ts  auth.service.ts
src/chat/: chat.controller.ts  chat.module.ts  chat.service.ts
src/notification/: notification.controller.ts  notification.service.ts
src/payment/: payment.controller.ts  payment.service.ts
src/trade/: trade-request.controller.ts  trade-request.service.ts  trade.controller.ts  trade.module.ts  trade.service.ts
test/: app.e2e-spec.ts
(+45 files in other folders)
